std-dive-logger-backend/std-dive-logger-ws/manifests/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: std-dive-logger-ws
spec:
  selector: { app: std-dive-logger-ws }
  ports:
    - { name: http, port: 80, targetPort: http }
